feat: create route for view funds
